--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bentogrid/core": "^1.1.1",
     "@lottiefiles/dotlottie-react": "^0.12.1",
     "@radix-ui/react-slot": "^1.1.1",
     "aos": "^2.3.4",
