--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@bentogrid/core": "^1.1.1",
+    "@camped-ui/bento-grid": "^1.0.1",
     "@lottiefiles/dotlottie-react": "^0.12.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tabler/icons-react": "^3.27.1",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.16.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
