--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@bentogrid/core": "^1.1.1",
     "@camped-ui/bento-grid": "^1.0.1",
     "@lottiefiles/dotlottie-react": "^0.12.1",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@tabler/icons-react": "^3.27.1",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
