--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@tabler/icons-react": "^3.27.1",
+    "aceternity-ui": "^0.2.2",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-vertical-timeline-component": "^3.5.3",
     "tailgrids": "^2.2.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
